--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"buildCommand":"cd dada-blog && npm install chart.js react-chartjs-2 && npm run build","outputDirectory":"dada-blog/.next","installCommand":"cd dada-blog && npm install","framework":"nextjs"}
+{"buildCommand":"cd dada_blog && npm install chart.js react-chartjs-2 && npm run build","outputDirectory":"dada_blog/.next","installCommand":"cd dada_blog && npm install","framework":"nextjs"}
