在构建命令中添加styled-jsx依赖

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"buildCommand":"npm install chart.js react-chartjs-2 && npm run build","outputDirectory":".next","installCommand":"npm install","framework":"nextjs"}
+{"buildCommand":"npm install chart.js react-chartjs-2 styled-jsx && npm run build","outputDirectory":".next","installCommand":"npm install","framework":"nextjs"}
