--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^3.1.3",
+    "caniuse-lite": "^1.0.30001599",
     "date-fns": "^4.1.0",
     "next": "15.3.3",
     "notion-to-md": "^3.1.9",
