修复构建问题：使用相对路径替代路径别名，解决路径解析错误

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"buildCommand":"npm ci && npm install chart.js react-chartjs-2 styled-jsx caniuse-lite@latest && npm run build","outputDirectory":".next","installCommand":"npm ci","framework":"nextjs"}
+{"buildCommand":"npm ci && npm install chart.js react-chartjs-2 styled-jsx caniuse-lite@latest && npm run build","outputDirectory":".next","installCommand":"npm ci","framework":"nextjs","buildTimezone":"Asia/Shanghai","buildEnvironment":{"NEXT_TELEMETRY_DISABLED":"1"}}
