--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node prepare.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@notionhq/client": "^3.1.3",
+    "autoprefixer": "^10.4.16",
     "caniuse-lite": "^1.0.30001599",
     "chart.js": "^4.4.1",
     "date-fns": "^4.1.0",
     "next": "15.3.3",
     "notion-to-md": "^3.1.9",
+    "postcss": "^8.4.31",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
@@ -22,10 +25,11 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
-    "rehype-highlight": "^7.0.2",
+    "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "styled-jsx": "^5.1.2"
+    "styled-jsx": "^5.1.2",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,11 +37,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
 }
