--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm ci && npm install chart.js react-chartjs-2 tailwindcss postcss autoprefixer && npm run build",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": ".next",
-  "installCommand": "npm install --no-fund --no-audit",
+  "installCommand": "npm install",
   "framework": "nextjs"
 }
