--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "styled-jsx": "^5.1.2",
+    "styled-jsx": "5.0.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
