--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@notionhq/client": "^3.1.3",
     "autoprefixer": "^10.4.16",
-    "caniuse-lite": "^1.0.30001599",
+    "caniuse-lite": "1.0.30001522",
     "chart.js": "^4.4.1",
     "date-fns": "^4.1.0",
     "next": "15.3.3",
