修复postcss模块问题：更正依赖安装和模块引用

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm install && npm install styled-jsx@5.0.0 caniuse-lite@1.0.30001522 --no-fund --no-audit && npx update-browserslist-db@latest && npm run build",
+  "buildCommand": "yarn && yarn add styled-jsx@5.0.0 postcss@8.4.31 --exact && yarn build",
   "outputDirectory": ".next",
-  "installCommand": "npm install",
+  "installCommand": "yarn install --frozen-lockfile",
   "framework": "nextjs"
 }
