--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "NEXT_SKIP_TYPECHECKING=true NEXT_SKIP_TS_CONFIG_PATH=./tsconfig.json yarn && yarn add styled-jsx@5.0.0 postcss@8.4.31 --exact && NEXT_SKIP_TYPECHECKING=true NEXT_DISABLE_TS=1 yarn build",
+  "buildCommand": "yarn && yarn add styled-jsx@5.0.0 postcss@8.4.31 --exact && yarn build",
   "outputDirectory": ".next",
   "installCommand": "yarn install --frozen-lockfile",
-  "framework": "nextjs",
-  "ignoreCommand": "rm -f tsconfig.json",
-  "env": {
-    "NEXT_SKIP_TYPECHECKING": "true",
-    "NEXT_DISABLE_TS": "1"
-  }
+  "framework": "nextjs"
 }
