--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "20.10.5",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "typescript": "^5"
+    "typescript": "5.3.3"
   },
   "resolutions": {
     "postcss": "8.4.31"
