--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "yarn && yarn add styled-jsx@5.0.0 postcss@8.4.31 typescript @types/node --exact --dev && yarn build",
+  "buildCommand": "yarn build",
   "outputDirectory": ".next",
-  "installCommand": "yarn install --frozen-lockfile",
+  "installCommand": "yarn install --frozen-lockfile && yarn add styled-jsx@5.0.0 postcss@8.4.31 typescript @types/node --exact --dev",
   "framework": "nextjs"
 }
