--- a/.github/workflows/sync-notion.yml
+++ b/.github/workflows/sync-notion.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    # 添加权限设置
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout code
@@ -32,8 +35,8 @@ jobs:
           
       - name: Commit and push if there are changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add .cache/
           git diff --quiet && git diff --staged --quiet || git commit -m "Auto-sync Notion data"
           git push 
