--- a/tsconfig.original.json
+++ b/tsconfig.original.json
@@ -13,8 +13,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["empty.ts"],
+  "include": ["next-env.d.ts", "empty.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
