--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "date-fns": "^4.1.0",
     "next": "15.3.3",
     "notion-to-md": "^3.1.9",
-    "postcss": "^8.4.31",
+    "postcss": "8.4.31",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
