--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "caniuse-lite": "1.0.30001522",
     "chart.js": "^4.4.1",
     "date-fns": "^4.1.0",
+    "mermaid": "^11.7.0",
     "next": "15.3.3",
     "notion-to-md": "^3.1.9",
     "postcss": "8.4.31",
